--- a/package.json
+++ b/package.json
@@ -13,11 +13,21 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "bufferutil": "^4.0.7",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "socket.io": "^4.6.0",
+    "socket.io-client": "^4.6.0",
+    "typescript": "4.9.5",
+    "utf-8-validate": "^5.0.10",
+    "ws": "^8.12.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6"
   }
 }
