--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ws": "^8.12.0"
   },
   "devDependencies": {
+    "@types/ws": "^8.5.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6"
